<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tech.thrithvam.bakeryapp.OrderProductList"
    android:background="@drawable/bg">
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/cardLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:indicator="BallTrianglePath"
        app:indicator_color="@color/primary_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="4dp"
        android:id="@+id/orderCard">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderDetailsRelative">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="OrderDescription"
                android:id="@+id/description"
                android:layout_toLeftOf="@+id/orderNo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/secondary_text"
                android:visibility="visible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="OrderNo"
                android:id="@+id/orderNo"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/primary_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Amount"
                android:id="@+id/amount"
                android:layout_below="@+id/expectedDeliveryTime"
                android:textColor="@color/primary_text"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/order_date"
                android:id="@+id/orderDateLabel"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Date"
                android:id="@+id/orderDate"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/orderDateLabel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/address"
                android:id="@+id/addressLabel"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/orderDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Address\nText\nHere"
                android:id="@+id/address"
                android:layout_below="@+id/addressLabel"
                android:textColor="@color/primary_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/readyDateLabel"
                android:layout_toStartOf="@+id/readyDateLabel" />
                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/branch"
                    android:id="@+id/branchLabel"
                    android:textColor="@color/secondary_text"
                    android:layout_below="@+id/address"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Branch name details"
                    android:id="@+id/branchName"
                    android:layout_below="@+id/branchLabel"
                    android:textColor="@color/primary_text"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/readyDateLabel"
                    android:layout_toStartOf="@+id/readyDateLabel" />
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/delivery_on"
                android:id="@+id/readyDateLabel"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/orderNo"
                android:layout_alignRight="@+id/orderNo"
                android:layout_alignEnd="@+id/orderNo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Date"
                android:id="@+id/expectedDeliveryDate"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/readyDateLabel"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Time"
                android:id="@+id/expectedDeliveryTime"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/expectedDeliveryDate"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <View
                android:layout_width="250dp"
                android:layout_height="0.5dp"
                android:background="@color/primary"
                android:layout_below="@+id/orderDetailsRelative"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/products"
                android:id="@+id/productsLabel"
                android:paddingTop="7dp"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/orderDetailsRelative"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/loading"
                android:id="@+id/loadingText"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/productsLabel"
                android:layout_centerHorizontal="true"/>
            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/itemsLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="visible"
                app:indicator="BallTrianglePath"
                app:indicator_color="@color/primary_text"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/productList"
                android:layout_below="@+id/productsLabel"
                android:layout_above="@+id/orderStatus" />
            <View
                android:layout_width="250dp"
                android:layout_height="0.5dp"
                android:background="@color/primary"
                android:layout_below="@+id/productList"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="10sp"
                android:text="@string/last_updated"
                android:id="@+id/lastUpdatedDateLabel"
                android:textColor="@color/secondary_text"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="10sp"
                android:text="Date"
                android:id="@+id/lastUpdatedDate"
                android:textColor="@color/secondary_text"
                android:layout_alignBottom="@+id/lastUpdatedDateLabel"
                android:layout_toRightOf="@+id/lastUpdatedDateLabel"
                android:layout_toEndOf="@+id/lastUpdatedDateLabel" />
            <TextView
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Order Status"
                android:id="@+id/orderStatus"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
