<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tech.thrithvam.bakeryapp.ProductReviews"
    android:background="@drawable/bg"
    android:animateLayoutChanges="true"
    android:id="@+id/drawerLayout">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                app:cardCornerRadius="4dp"
                android:layout_above="@+id/writeReviewCard">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/loading"
                        android:id="@+id/loadingText"
                        android:textColor="@color/secondary_text"
                        android:layout_margin="5dp"
                        android:layout_centerHorizontal="true"/>
                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/itemsLoading"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:visibility="visible"
                        app:indicator="BallTrianglePath"
                        app:indicator_color="@color/primary_text"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/reviews"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:id="@+id/writeReviewCard"
            app:cardCornerRadius="4dp"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:focusableInTouchMode="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:ems="10"
            android:id="@+id/reviewInput"
            android:gravity="top|start"
            android:hint="@string/write_a_review"
            android:background="@drawable/boarder"
            android:scrollbars="vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/submit"
            android:id="@+id/submitReview"
            android:layout_below="@id/reviewInput"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/accent"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:onClick="insertReview"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:id="@+id/rightDrawer">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/catItemsLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="visible"
            app:indicator="BallTrianglePath"
            app:indicator_color="@color/primary_text"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
        <ListView
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@color/divider"
            android:dividerHeight="0.5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"
            android:layout_below="@id/drawer"
            />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
